syntax = "proto3";

package fraud;

message PodInfo {
  string ip_address  = 1;
  string pod_name     = 2;
  string availability_zone   = 3;
  string grpc_host   = 4;
  string version     = 5;
}

message PodInfoRequest {
}

message PodInfoResponse {
  PodInfo podInfo = 1;
}

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN         = 0;
    SERVING         = 1;
    NOT_SERVING     = 2;
    SERVICE_UNKNOWN = 3;  // Used only by the Watch method.
  }
  ServingStatus status = 1;
}

service Health {
    rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
    rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);
}

service FraudService  {
    rpc GetPodInfo(PodInfoRequest) returns (PodInfoResponse) {};
}

message Payment {
    string account_id  = 1;
    string card_number = 2;
    string card_type  = 3;
    string currency = 4;
    string mcc  = 5;
    string amount = 6;
    string status = 7;
}

message PaymentRequest {
  Payment payment = 1;
}

message PaymentResponse {
  Payment payment = 1;
}

service PaymentService  {
    rpc CheckPaymentFraud(PaymentRequest) returns (PaymentResponse) {};
}